test/corpus/string.txt
================================================================================
Raw String
================================================================================
r#"aaa"#

--------------------------------------------------------------------------------

(source_file
  (string
    (raw_string)))

================================================================================
Raw String in struct
================================================================================
Obj(text: r#"aaa"#)

--------------------------------------------------------------------------------

(source_file
  (struct
    (struct_name
      (identifier))
    (struct_entry
      (identifier)
      (string
        (raw_string)))))

